# folios-v2

./: .env.example  .gitignore  ANTHROPIC_PORTFOLIO_COMPLETE.md  ANTHROPIC_RECOMMENDATIONS.md  ANTHROPIC_SUCCESS_REPORT.md  GEMINI_BATCH_TIMEOUT_ANALYSIS.md  HTML_GENERATION_PLAN.md  HTML_GENERATION_SUCCESS.md  INLINE_EXECUTION_SUMMARY.md  MIGRATION_MAPPING.md  MIGRATION_SUCCESS.md  Makefile  PORTFOLIO_EXECUTION_IMPLEMENTATION.md  PORTFOLIO_EXECUTION_SUMMARY.md  README.md  STRATEGY_COVERAGE.csv  STRATEGY_COVERAGE_REPORT.md  STRATEGY_COVERAGE_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  TEST_IMPROVEMENTS_SUMMARY.md  dividend_harvest_analysis.json  folios_v2_backup_20251012.db  friday_strategies.txt  provider_json_comparison.md  pyproject.toml  strategy_id_mapping.json  test_anthropic_with_websearch.py  test_cli_providers.py  test_output.txt  test_results_summary.md  zero_coverage_strategies.txt
data/: strategy_screener_mapping.json
docs/: AGENT_ONBOARDING.md  ANTHROPIC_CLI_TROUBLESHOOTING.md  COMMAND_REFERENCE.md  FINAL_STATUS.md  GEMINI_BATCH_FIX_SUMMARY.md  HARVEST_OPENAI_BATCHES_PLAN.md  IMPLEMENTATION_SUMMARY.md  SCREENER_UPDATE_SUMMARY.md  anthropic_cli_integration.md  full_lifecycle_workflow.md  import_strategies_plan.md  portfolio_execution.md  prompt_portfolio_context.md  real_batch_migration.md  requirements.md  screener_configurations.md  weekday_runbook.md  yahoo_price_cache_plan.md
public/: feed.html  index.html  strategy-036bed93-8905-4e48-9348-6788fc15677b.html  strategy-037d907b-393c-46ed-a332-0a11b3744494.html  strategy-06c108f5-a0cd-4ab2-a7b9-980f4a8d7660.html  strategy-08491010-8cb3-4150-abc9-82e128dfbc85.html  strategy-0996fc65-e1e7-4a87-87e2-8eea5e5b6396.html  strategy-0a245bcc-9b76-4139-b2c5-9886c1bcb955.html  strategy-0b1ef28a-515e-49df-8708-de6ec70cd56e.html  strategy-0e3f8964-5f16-475a-8e74-e474c4634be7.html  strategy-0f4bf47a-e63c-40d7-8138-e8a5395f5331.html  strategy-18e0f836-2541-49a9-b7b0-243a9cc7ff0d.html  strategy-194abbef-a5f3-4d07-ae73-8710de74bee1.html  (+69 more)
scripts/: __init__.py  harvest.py  (+44 more)
(+116 files in other folders)
