[build-system]
requires = ["hatchling>=1.17"]
build-backend = "hatchling.build"

[project]
name = "folios-v2"
version = "0.1.0"
description = "Strictly typed Folios trading orchestration platform"
authors = [{ name = "Arun", email = "arun@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "typer>=0.12",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-dateutil>=2.9",
    "greenlet>=3.0",
    "google-genai>=0.3.0",
    "yfinance>=0.2.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
folios = "folios_v2.cli.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.4",
    "types-python-dateutil",
    "types-jinja2",
    "types-requests",
]

[project.urls]
Homepage = "https://example.com/folios-v2"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/folios_v2"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "ASYNC", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
packages = ["folios_v2"]
strict = true
warn_unused_configs = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = ["typer", "pydantic_settings"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "folios_v2.cli.*"
allow_untyped_decorators = true

[[tool.mypy.overrides]]
module = ["sqlalchemy", "sqlalchemy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["folios_v2"]
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
